[package]
name = "zeroclaw-plugin-rpc-trimmer"
version = "0.1.0"
edition = "2021"
authors = ["Tu Nombre <tu@email.com>"]
description = "Plugin liviano y seguro para recortar respuestas RPC de Solana y prevenir Prompt Injection en ZeroClaw"

# ==============================================================================
# CONFIGURACIÓN DE COMPILACIÓN (CRÍTICO PARA WASM/WASI)
# ==============================================================================
[lib]
crate-type = ["cdylib"]

# ==============================================================================
# DEPENDENCIAS MÍNIMAS Y OPTIMIZADAS
# ==============================================================================
[dependencies]
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
wit-bindgen = "0.30"

# ==============================================================================
# PERFILES DE OPTIMIZACIÓN (PARA REDUCIR TAMAÑO Y GANAR VELOCIDAD)
# ==============================================================================
[profile.release]
opt-level = "s"     # Optimiza el tamaño del binario WASM (Small size)
lto = true          # Link-Time Optimization: elimina todo el código muerto no utilizado
codegen-units = 1   # Mayor optimización en la compilación
panic = "abort"     # Elimina el código de desempaquetado de errores
